# django_task_1

./: .gitignore  README.md
config/: settings.py
django_task_01/: .env.example  README.md  manage.py
django_task_01/templates/: book_detail.html
django_task_02/: README.md  manage.py
django_task_02/config/: urls.py  wsgi.py
django_task_03/: README.md  manage.py
django_task_05/: README.md
django_task_07/: README.md  db.sqlite3
django_task_08/: README.md  db.sqlite3
django_task_13/: README.md  manage.py
django_task_14/: README.md  manage.py
django_task_2/: pyproject.toml
django_task_2/config/: asgi.py  settings.py
django_task_2/todo/: admin.py  views.py
django_task_2/todo/migrations/: 0001_initial.py
django_task_2/todo/templates/: todo_info.html
django_task_3/: db.sqlite3
django_task_3/blog/: manage.py  models.py  pyproject.toml  views.py
django_task_3/blog/blog/: admin.py  models.py  tests.py  views.py
django_task_3/blog/blog/migrations/: 0001_initial.py
django_task_3/blog/config/: settings.py  urls.py
django_task_3/blog/migrations/: 0001_initial.py
django_task_3/blog/templates/: blog_detail.html  blog_list.html  todo_detail.html  todo_list.html
django_task_3/blog/templates/registration/: login.html  signup.html
django_task_3/blog/todo/: admin.py  apps.py  models.py  tests.py  views.py
django_task_3/blog/todo/migrations/: 0001_initial.py
django_task_3/blog/users/: tests.py  views.py
django_task_4/: README.md  db.sqlite3
django_task_6/: README.md  db.sqlite3
templates/: book_list.html  gugu.html  movies.html
(+130 files in other folders)
