[tool.poetry]
name = "codfin_blog"
version = "0.1.0"
description = "Blog and TODO Django project"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
ipython = "^8.0"
django-extensions = "^3.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
